--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "symfony/finder": "^3.3"
     },
     "replace": {
-        "web-token/jwt-core": "self.version"
+        "web-token/jwt-core": "self.version",
+        "web-token/jwt-checker": "self.version"
     },
    "suggest":{
         "bjeavons/zxcvbn-php": "Adds key quality check for oct keys."
