--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -1,26 +1,28 @@
 {
-    "name": "web-token/jwt-signature",
-    "description": "Signature component of the JWT Framework.",
+    "name": "web-token/jwt-encryption",
+    "description": "Encryption component of the JWT Framework.",
     "type": "library",
     "license": "MIT",
     "keywords": ["JWS", "JWT", "JWE", "JWA", "JWK", "JWKSet", "Jot", "Jose", "RFC7515", "RFC7516", "RFC7517", "RFC7518", "RFC7519", "RFC7520", "Bundle", "Symfony"],
-    "homepage": "https://github.com/web-token/jwt-signature",
+    "homepage": "https://github.com/web-token/jwt-encryption",
     "authors": [
         {
             "name": "Florent Morselli",
             "homepage": "https://github.com/Spomky"
         },{
             "name": "All contributors",
-            "homepage": "https://github.com/web-token/jwt-signature/contributors"
+            "homepage": "https://github.com/web-token/jwt-encryption/contributors"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Jose\\Component\\Signature\\":  ""
+            "Jose\\Component\\Encryption\\":  ""
         }
     },
     "require": {
         "php": "^7.1",
+        "paragonie/sodium_compat": "^1.1",
+        "spomky-labs/aes-key-wrap": "^4.0",
         "web-token/jwt-core": "^1.0@dev",
         "web-token/jwt-checker": "^1.0@dev"
     },
