Split Key Management

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
         "web-token/jwt-core": "self.version",
         "web-token/jwt-checker": "self.version",
         "web-token/jwt-signature": "self.version",
-        "web-token/jwt-encryption": "self.version"
+        "web-token/jwt-encryption": "self.version",
+        "web-token/jwt-key-mgmt": "self.version"
     },
    "suggest":{
         "bjeavons/zxcvbn-php": "Adds key quality check for oct keys."
