--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ matrix:
     - php: nightly
     - php: 7.2
 before_script:
-  - chmod +x ./bin/install_php_ext.sh
-  - if [ "$TRAVIS_PHP_VERSION" = '7.1' ]; then ./bin/install_php_ext.sh; fi
+  - chmod +x ./tests/install_php_ext.sh
+  - if [ "$TRAVIS_PHP_VERSION" = '7.1' ]; then ./tests/install_php_ext.sh; fi
   - composer self-update
   - mkdir -p build/logs
   - if [[ $deps = low ]]; then composer update --no-interaction --prefer-lowest ; fi
