--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -16,7 +16,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Jose\\Component\\KeyManagement\\":  ""
+            "Jose\\Bundle\\JoseFramework\\":  ""
         }
     },
     "require": {
