--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "php": "^7.1",
+        "lib-openssl": "*",
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0",
         "web-token/jwt-core": "^1.0@dev",
