--- a/src/Component/Signature/composer.json
+++ b/src/Component/Signature/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "php": "^7.1",
+        "lib-openssl": "*",
         "web-token/jwt-core": "^1.0@dev",
         "web-token/jwt-checker": "^1.0@dev"
     },
