Split Signature and Encryption Bundles

--- a/src/Bundle/Encryption/Resources/config/services.yml
+++ b/src/Bundle/Encryption/Resources/config/services.yml
@@ -7,3 +7,6 @@ services:
     Jose\Component\Encryption\JWEBuilderFactory: ~
     Jose\Component\Encryption\JWELoaderFactory: ~
     Jose\Component\Encryption\Compression\CompressionMethodManagerFactory: ~
+    Jose\Component\Encryption\JWETokenHeaderChecker:
+        tags:
+            - {'name': 'jose.checker.token_type'}
