--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,12 @@
         "web-token/jwt-signature": "self.version",
         "web-token/jwt-encryption": "self.version",
         "web-token/jwt-key-mgmt": "self.version",
-        "web-token/jwt-console": "self.version"
+        "web-token/jwt-console": "self.version",
+        "web-token/jwt-bundle": "self.version",
+        "web-token/jwt-checker-bundle": "self.version",
+        "web-token/jwt-console-bundle": "self.version",
+        "web-token/jwt-signature-bundle": "self.version",
+        "web-token/jwt-encryption-bundle": "self.version"
     },
    "suggest":{
         "bjeavons/zxcvbn-php": "Adds key quality check for oct keys."
