--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,6 @@
     },
     "require-dev": {
         "ext-curl": "*",
-        "behat/behat": "^3.1",
-        "behat/mink": "^1.5",
-        "behat/mink-browserkit-driver": "^1.1",
-        "behat/mink-extension": "^2.0",
-        "behat/symfony2-extension": "^2.1",
         "bjeavons/zxcvbn-php": "^0.3.0",
         "php-http/httplug": "^1.1",
         "php-http/httplug-bundle": "^1.7",
@@ -55,7 +50,9 @@
         "phpbench/phpbench": "^0.13.0",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
-        "symfony/finder": "^3.3"
+        "symfony/finder": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/browser-kit": "^3.3"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
