--- a/src/Bundle/Checker/composer.json
+++ b/src/Bundle/Checker/composer.json
@@ -26,6 +26,9 @@
         "web-token/jwt-checker": "^1.0@dev"
     },
     "require-dev": {
+        "symfony/framework-bundle": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/browser-kit": "^3.3",
         "phpunit/phpunit": "^6.0"
     },
     "extra": {
