--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -27,6 +27,9 @@
         "web-token/jwt-core": "^1.0@dev"
     },
     "require-dev": {
+        "symfony/framework-bundle": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/browser-kit": "^3.3",
         "phpunit/phpunit": "^6.0"
     },
     "extra": {
