--- a/src/Bundle/Encryption/phpunit.xml.dist
+++ b/src/Bundle/Encryption/phpunit.xml.dist
@@ -15,7 +15,10 @@
             <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
-
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <server name="KERNEL_DIR" value="./Tests/" />
+    </php>
     <filter>
         <whitelist>
             <directory suffix=".php">./</directory>
