--- a/src/Bundle/Encryption/composer.json
+++ b/src/Bundle/Encryption/composer.json
@@ -28,6 +28,9 @@
         "web-token/jwt-encryption": "^1.0@dev"
     },
     "require-dev": {
+        "symfony/framework-bundle": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/browser-kit": "^3.3",
         "phpunit/phpunit": "^6.0"
     },
     "extra": {
