KeyManagement Tests added and services marked as private

--- a/src/Bundle/Checker/Resources/config/checkers.yml
+++ b/src/Bundle/Checker/Resources/config/checkers.yml
@@ -2,25 +2,25 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
+        public: false
+
+    Jose\Component\Checker\HeaderCheckerManagerFactory:
         public: true
 
-    Jose\Component\Checker\HeaderCheckerManagerFactory: ~
-    Jose\Component\Checker\ClaimCheckerManagerFactory: ~
+    Jose\Component\Checker\ClaimCheckerManagerFactory:
+        public: true
 
     Jose\Component\Checker\ExpirationTimeChecker:
-        public: false
         tags:
             - { name: 'jose.checker.header', alias: 'exp' }
             - { name: 'jose.checker.claim', alias: 'exp' }
 
     Jose\Component\Checker\IssuedAtChecker:
-        public: false
         tags:
             - { name: 'jose.checker.header', alias: 'iat' }
             - { name: 'jose.checker.claim', alias: 'iat' }
 
     Jose\Component\Checker\NotBeforeChecker:
-        public: false
         tags:
             - { name: 'jose.checker.header', alias: 'nbf' }
             - { name: 'jose.checker.claim', alias: 'nbf' }
