--- a/src/Bundle/JoseFramework/Resources/config/json_converter.yml
+++ b/src/Bundle/JoseFramework/Resources/config/json_converter.yml
@@ -2,6 +2,6 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     Jose\Component\Core\Converter\StandardJsonConverter: ~
