--- a/src/Bundle/KeyManagement/Resources/config/jku_source.yml
+++ b/src/Bundle/KeyManagement/Resources/config/jku_source.yml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     Jose\Component\KeyManagement\JKUFactory:
         arguments:
