--- a/src/Bundle/KeyManagement/Tests/TestBundle/Resources/config/services.yml
+++ b/src/Bundle/KeyManagement/Tests/TestBundle/Resources/config/services.yml
@@ -2,6 +2,4 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: false
-
-    Jose\Component\KeyManagement\JWKFactory: ~
+        public: true
