--- a/src/Bundle/Encryption/Resources/config/serializers.yml
+++ b/src/Bundle/Encryption/Resources/config/serializers.yml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     Jose\Component\Encryption\Serializer\JWESerializerManagerFactory: ~
     Jose\Component\Encryption\Serializer\CompactSerializer:
