--- a/src/Bundle/KeyManagement/Resources/config/jwkset_sources.yml
+++ b/src/Bundle/KeyManagement/Resources/config/jwkset_sources.yml
@@ -1,5 +1,6 @@
 services:
     jose.jwk_set_source.jwkset:
+        public: false
         class: 'Jose\Bundle\KeyManagement\DependencyInjection\Source\JWKSetSource\JWKSet'
         tags:
             - {'name': 'jose.jwkset_source'}
