--- a/src/Bundle/KeyManagement/composer.json
+++ b/src/Bundle/KeyManagement/composer.json
@@ -27,6 +27,9 @@
         "web-token/jwt-bundle": "^1.0@dev"
     },
     "require-dev": {
+        "symfony/framework-bundle": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/browser-kit": "^3.3",
         "phpunit/phpunit": "^6.0",
         "php-http/httplug-bundle": "^1.7",
         "php-http/guzzle6-adapter": "^1.1.1"
