--- a/src/Bundle/Signature/Resources/config/algorithms.yml
+++ b/src/Bundle/Signature/Resources/config/algorithms.yml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     Jose\Component\Signature\Algorithm\ES256:
         tags:
