--- a/src/Bundle/Signature/Resources/config/serializers.yml
+++ b/src/Bundle/Signature/Resources/config/serializers.yml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     Jose\Component\Signature\Serializer\JWSSerializerManagerFactory: ~
     Jose\Component\Signature\Serializer\CompactSerializer:
