--- a/src/Bundle/Checker/composer.json
+++ b/src/Bundle/Checker/composer.json
@@ -21,9 +21,9 @@
     },
     "require": {
         "php": "^7.1",
-        "web-token/jwt-bundle": "^1.0@dev",
-        "web-token/jwt-core": "^1.0@dev",
-        "web-token/jwt-checker": "^1.0@dev"
+        "web-token/jwt-bundle": "^1.0@alpha",
+        "web-token/jwt-core": "^1.0@alpha",
+        "web-token/jwt-checker": "^1.0@alpha"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3",
