--- a/src/Bundle/Console/composer.json
+++ b/src/Bundle/Console/composer.json
@@ -21,10 +21,10 @@
     },
     "require": {
         "php": "^7.1",
-        "web-token/jwt-bundle": "^1.0@dev",
-        "web-token/jwt-core": "^1.0@dev",
-        "web-token/jwt-console": "^1.0@dev",
-        "web-token/jwt-key-mgmt": "^1.0@dev"
+        "web-token/jwt-bundle": "^1.0@alpha",
+        "web-token/jwt-core": "^1.0@alpha",
+        "web-token/jwt-console": "^1.0@alpha",
+        "web-token/jwt-key-mgmt": "^1.0@alpha"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3",
