--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -24,7 +24,7 @@
         "symfony/config": "^3.3",
         "symfony/dependency-injection": "^3.3",
         "symfony/http-kernel": "^3.3",
-        "web-token/jwt-core": "^1.0@dev"
+        "web-token/jwt-core": "^1.0@alpha"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3",
