--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -24,8 +24,8 @@
         "lib-openssl": "*",
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0",
-        "web-token/jwt-core": "^1.0@dev",
-        "web-token/jwt-checker": "^1.0@dev"
+        "web-token/jwt-core": "^1.0@alpha",
+        "web-token/jwt-checker": "^1.0@alpha"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
