StandardJsonConverter to JsonConverter adn exp/iat/nbf not header checkers anymore

--- a/src/Bundle/Checker/Tests/config/config_test.yml
+++ b/src/Bundle/Checker/Tests/config/config_test.yml
@@ -17,4 +17,4 @@ jose:
     header_checkers:
         checker1:
             is_public: true
-            headers: ['exp', 'iat', 'nbf', 'custom_checker']
+            headers: ['custom_checker']
