--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,6 @@
         "ext-gmp": "*",
         "ext-mbstring": "*",
         "lib-openssl": "*",
-        "fgrosse/phpasn1": "^2.0",
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0",
         "spomky-labs/base64url": "^1.0",
@@ -43,16 +42,17 @@
     "require-dev": {
         "ext-curl": "*",
         "bjeavons/zxcvbn-php": "^0.3.0",
+        "fgrosse/phpasn1": "^2.0",
+        "php-http/guzzle6-adapter": "^1.1.1",
         "php-http/httplug": "^1.1",
         "php-http/httplug-bundle": "^1.7",
         "php-http/message-factory": "^1.0",
-        "php-http/guzzle6-adapter": "^1.1.1",
         "phpbench/phpbench": "^0.13.0",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
+        "symfony/browser-kit": "^3.3",
         "symfony/finder": "^3.3",
-        "symfony/yaml": "^3.3",
-        "symfony/browser-kit": "^3.3"
+        "symfony/yaml": "^3.3"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
@@ -76,7 +76,7 @@
    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "0.0.x-dev"
         }
     },
     "config": {
