--- a/src/Bundle/Encryption/Tests/config/config_test.yml
+++ b/src/Bundle/Encryption/Tests/config/config_test.yml
@@ -19,6 +19,6 @@ jose:
         loader1:
             key_encryption_algorithms: ['RSA-OAEP-256', 'A256KW']
             content_encryption_algorithms: ['A256CBC-HS512']
-            header_checkers: ['iat', 'exp', 'nbf']
+            header_checkers: []
             serializers: ['jwe_compact', 'jwe_json_general', 'jwe_json_flattened']
             is_public: true
