--- a/src/Bundle/Encryption/composer.json
+++ b/src/Bundle/Encryption/composer.json
@@ -21,11 +21,9 @@
     },
     "require": {
         "php": "^7.1",
-        "web-token/jwt-bundle": "^1.0@alpha",
-        "web-token/jwt-checker-bundle": "^1.0@alpha",
-        "web-token/jwt-core": "^1.0@alpha",
-        "web-token/jwt-checker": "^1.0@alpha",
-        "web-token/jwt-encryption": "^1.0@alpha"
+        "web-token/jwt-bundle": "^0.0",
+        "web-token/jwt-checker-bundle": "^0.0",
+        "web-token/jwt-encryption": "^0.0"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3",
