--- a/src/Bundle/KeyManagement/composer.json
+++ b/src/Bundle/KeyManagement/composer.json
@@ -22,9 +22,8 @@
     "require": {
         "php": "^7.1",
         "symfony/routing": "^3.3",
-        "web-token/jwt-core": "^1.0@alpha",
-        "web-token/jwt-key-mgmt": "^1.0@alpha",
-        "web-token/jwt-bundle": "^1.0@alpha"
+        "web-token/jwt-key-mgmt": "^0.0",
+        "web-token/jwt-bundle": "^0.0"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3",
