--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -24,8 +24,7 @@
         "lib-openssl": "*",
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0",
-        "web-token/jwt-core": "^1.0@alpha",
-        "web-token/jwt-checker": "^1.0@alpha"
+        "web-token/jwt-checker": "^0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
