--- a/src/Component/Signature/composer.json
+++ b/src/Component/Signature/composer.json
@@ -22,8 +22,7 @@
     "require": {
         "php": "^7.1",
         "lib-openssl": "*",
-        "web-token/jwt-core": "^1.0@alpha",
-        "web-token/jwt-checker": "^1.0@alpha"
+        "web-token/jwt-checker": "^0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
