--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -26,7 +26,7 @@ jose:
         builder1:
             is_public: true
             signature_algorithms: ['HS256', 'RS256', 'ES256']
-    jws_loaders:
+    jws_verifiers:
         loader1:
             signature_algorithms: ['HS256', 'RS256', 'ES256']
             header_checkers: []
