--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -37,7 +37,7 @@ jose:
             is_public: true
             key_encryption_algorithms: ['RSA-OAEP-256', 'A256KW']
             content_encryption_algorithms: ['A256CBC-HS512']
-    jwe_loaders:
+    jwe_decrypters:
         loader1:
             key_encryption_algorithms: ['RSA-OAEP-256', 'A256KW']
             content_encryption_algorithms: ['A256CBC-HS512']
