--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -30,7 +30,6 @@ jose:
         loader1:
             signature_algorithms: ['HS256', 'RS256', 'ES256']
             header_checkers: []
-            serializers: ['jws_compact', 'jws_json_general', 'jws_json_flattened']
             is_public: true
     jwe_builders:
         builder1:
@@ -42,7 +41,14 @@ jose:
             key_encryption_algorithms: ['RSA-OAEP-256', 'A256KW']
             content_encryption_algorithms: ['A256CBC-HS512']
             header_checkers: []
-            serializers: ['jwe_compact', 'jwe_json_general', 'jwe_json_flattened']
+            is_public: true
+    jwe_serializers:
+        jwe_serializer1:
+            serializers: ['jwe_compact', 'jwe_json_flattened', 'jwe_json_general']
+            is_public: true
+    jws_serializers:
+        jws_serializer1:
+            serializers: ['jws_compact', 'jws_json_flattened', 'jws_json_general']
             is_public: true
     keys:
         jwk1:
