--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "php-http/message-factory": "^1.0",
         "phpbench/phpbench": "^0.13.0",
         "phpunit/phpunit": "^6.0",
+        "satooshi/php-coveralls": "^1.0",
         "symfony/browser-kit": "^3.3",
         "symfony/finder": "^3.3",
         "symfony/yaml": "^3.3"
