--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -24,7 +24,7 @@
         "lib-openssl": "*",
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0.1",
-        "web-token/jwt-checker": "^0.2"
+        "web-token/jwt-core": "^0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
