--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "php-http/httplug": "^1.1",
         "php-http/httplug-bundle": "^1.7",
         "php-http/message-factory": "^1.0",
+        "php-http/mock-client": "^1.0",
         "phpbench/phpbench": "^0.13.0",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
