None Key Creation Command for Symfony Console added.

--- a/src/Bundle/Console/Resources/config/commands.yml
+++ b/src/Bundle/Console/Resources/config/commands.yml
@@ -36,6 +36,10 @@ services:
         tags:
             - {name: 'console.command'}
 
+    Jose\Component\Console\NoneKeyGeneratorCommand:
+        tags:
+            - {name: 'console.command'}
+
     Jose\Component\Console\KeyFileLoaderCommand:
         tags:
             - {name: 'console.command'}
