--- a/src/Bundle/Console/composer.json
+++ b/src/Bundle/Console/composer.json
@@ -25,9 +25,9 @@
         "web-token/jwt-console": "^0.2"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^3.3",
-        "symfony/yaml": "^3.3",
-        "symfony/browser-kit": "^3.3",
+        "symfony/framework-bundle": "^3.3|^4.0",
+        "symfony/yaml": "^3.3|^4.0",
+        "symfony/browser-kit": "^3.3|^4.0",
         "phpunit/phpunit": "^6.0"
     },
     "extra": {
