--- a/src/Bundle/KeyManagement/composer.json
+++ b/src/Bundle/KeyManagement/composer.json
@@ -21,14 +21,14 @@
     },
     "require": {
         "php": "^7.1",
-        "symfony/routing": "^3.3",
+        "symfony/routing": "^3.3|^4.0",
         "web-token/jwt-key-mgmt": "^0.2",
         "web-token/jwt-bundle": "^0.2"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^3.3",
-        "symfony/yaml": "^3.3",
-        "symfony/browser-kit": "^3.3",
+        "symfony/framework-bundle": "^3.3|^4.0",
+        "symfony/yaml": "^3.3|^4.0",
+        "symfony/browser-kit": "^3.3|^4.0",
         "phpunit/phpunit": "^6.0",
         "php-http/httplug-bundle": "^1.7",
         "php-http/guzzle6-adapter": "^1.1.1"
