--- a/src/Bundle/KeyManagement/Resources/config/jku_source.yml
+++ b/src/Bundle/KeyManagement/Resources/config/jku_source.yml
@@ -6,12 +6,12 @@ services:
 
     Jose\Component\KeyManagement\JKUFactory:
         arguments:
-            - '@Jose\Component\Core\Converter\JsonConverter'
+            - '@Jose\Component\Core\Converter\StandardConverter'
             - '@jose.http_client'
             - '@jose.request_factory'
 
     Jose\Component\KeyManagement\X5UFactory:
-            - '@Jose\Component\Core\Converter\JsonConverter'
+            - '@Jose\Component\Core\Converter\StandardConverter'
             - '@jose.http_client'
             - '@jose.request_factory'
 
