--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0.1",
         "spomky-labs/base64url": "^1.0",
-        "symfony/config": "^3.3|^4.0",
-        "symfony/console": "^3.3|^4.0",
-        "symfony/dependency-injection": "^3.3|^4.0",
-        "symfony/framework-bundle": "^3.3|^4.0",
-        "symfony/http-kernel": "^3.3|^4.0"
+        "symfony/config": "^3.3",
+        "symfony/console": "^3.3",
+        "symfony/dependency-injection": "^3.3",
+        "symfony/framework-bundle": "^3.3",
+        "symfony/http-kernel": "^3.3"
     },
     "require-dev": {
         "ext-curl": "*",
@@ -46,12 +46,12 @@
         "guzzlehttp/psr7": "^1.4",
         "php-http/httplug-bundle": "^1.7",
         "php-http/mock-client": "^1.0",
-        "phpbench/phpbench": "^0.13.0",
+        "phpbench/phpbench": "^1.0@dev",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
-        "symfony/browser-kit": "^3.3|^4.0",
-        "symfony/finder": "^3.3|^4.0",
-        "symfony/yaml": "^3.3|^4.0"
+        "symfony/browser-kit": "^3.3",
+        "symfony/finder": "^3.3",
+        "symfony/yaml": "^3.3"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
