--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "web-token/jwt-framework",
     "description": "JSON Object Signing and Encryption library for PHP and Symfony Bundle.",
-    "type": "symfony-bundle",
+    "type": "symfony-bundle|^4.0",
     "license": "MIT",
     "keywords": ["JWS", "JWT", "JWE", "JWA", "JWK", "JWKSet", "Jot", "Jose", "RFC7515", "RFC7516", "RFC7517", "RFC7518", "RFC7519", "RFC7520", "Bundle", "Symfony"],
     "homepage": "https://github.com/web-token/jwt-framework",
@@ -34,11 +34,11 @@
         "paragonie/sodium_compat": "^1.1",
         "spomky-labs/aes-key-wrap": "^4.0.1",
         "spomky-labs/base64url": "^1.0",
-        "symfony/config": "^3.3",
-        "symfony/console": "^3.3",
-        "symfony/dependency-injection": "^3.3",
-        "symfony/framework-bundle": "^3.3",
-        "symfony/http-kernel": "^3.3"
+        "symfony/config": "^3.3|^4.0",
+        "symfony/console": "^3.3|^4.0",
+        "symfony/dependency-injection": "^3.3|^4.0",
+        "symfony/framework-bundle": "^3.3|^4.0",
+        "symfony/http-kernel": "^3.|^4.03"
     },
     "require-dev": {
         "ext-curl": "*",
@@ -49,9 +49,10 @@
         "phpbench/phpbench": "^1.0@dev",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
-        "symfony/browser-kit": "^3.3",
-        "symfony/finder": "^3.3",
-        "symfony/yaml": "^3.3"
+        "symfony/browser-kit": "^3.3|^4.0",
+        "symfony/finder": "^3.3|^4.0",
+        "symfony/phpunit-bridge": "^3.3|^4.0",
+        "symfony/yaml": "^3.|^4.03"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
