--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,7 +21,7 @@
         <ini name="intl.default_locale" value="en" />
         <ini name="intl.error_level" value="0" />
         <ini name="memory_limit" value="-1" />
-        <server name="KERNEL_DIR" value="./src/Bundle/JoseFramework/Tests/" />
+        <server name="KERNEL_CLASS" value="Jose\Bundle\JoseFramework\Tests\AppKernel" />
     </php>
     <filter>
         <whitelist>
@@ -36,4 +36,7 @@
             </exclude>
         </whitelist>
     </filter>
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+    </listeners>
 </phpunit>
