--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -24,7 +24,7 @@
         "symfony/config": "^3.3|^4.0",
         "symfony/dependency-injection": "^3.3|^4.0",
         "symfony/http-kernel": "^3.3|^4.0",
-        "web-token/jwt-core": "^0.5@dev"
+        "web-token/jwt-core": "^0.5"
     },
     "require-dev": {
         "symfony/framework-bundle": "^3.3|^4.0",
