--- a/src/Bundle/JoseFramework/Resources/config/services.yml
+++ b/src/Bundle/JoseFramework/Resources/config/services.yml
@@ -5,3 +5,7 @@ services:
         public: false
 
     Jose\Component\Core\AlgorithmManagerFactory: ~
+
+    Jose\Bundle\JoseFramework\EnvVarProcessor\:
+        resource: '../../EnvVarProcessor'
+        tags: ['container.env_var_processor']
