Auto split the project
This commit adds the "jderusse/docker-gitsplit" splitting system to the project.
It allows to split the whole project at once when master ov vX.Y branches receive updates.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,44 @@
 language: php
-sudo: true
+
+sudo: required
+
+services:
+    - docker
+
 cache:
-  directories:
-    - "$HOME/.composer/cache"
-    - vendor
+    directories:
+        - "$HOME/.composer/cache"
+        - "vendor"
+        - "/cache/gitsplit"
+
 matrix:
-  allow_failures:
-    - php: nightly
-  fast_finish: true
-  include:
-    - php: 7.1
-      env: deps=low
-    - php: 7.1
-    - php: nightly
-    - php: 7.2
+    allow_failures:
+        - php: nightly
+    fast_finish: true
+    include:
+        - php: 7.1
+          env: deps=low
+        - php: 7.1
+        - php: nightly
+        - php: 7.2
+
+install:
+    - docker pull jderusse/gitsplit
+    - git config remote.origin.fetch "+refs/*:refs/*"
+    - git config remote.origin.mirror true
+    - git fetch --unshallow
+
 before_script:
-  - chmod +x ./tests/install_php_ext.sh
-  - if [ "$TRAVIS_PHP_VERSION" = '7.1' ]; then ./tests/install_php_ext.sh; fi
-  - composer self-update
-  - mkdir -p build/logs
-  - if [[ $deps = low ]]; then composer update --no-interaction --prefer-lowest ; fi
-  - if [[ !$deps ]]; then composer install --no-interaction ; fi
+    - chmod +x ./tests/install_php_ext.sh
+    - if [ "$TRAVIS_PHP_VERSION" = '7.1' ]; then ./tests/install_php_ext.sh; fi
+    - composer self-update
+    - mkdir -p build/logs
+    - if [[ $deps = low ]]; then composer update --no-interaction --prefer-lowest ; fi
+    - if [[ !$deps ]]; then composer install --no-interaction ; fi
+
 script:
-  - "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
+    - docker run --rm -t -e GH_TOKEN -v /cache/gitsplit:/cache/gitsplit -v ${PWD}:/srv jderusse/gitsplit
+    - "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
+
 after_success:
-  - vendor/bin/coveralls --no-interaction
+    - vendor/bin/coveralls --no-interaction
