--- a/src/Bundle/JoseFramework/Resources/config/jws_services.yml
+++ b/src/Bundle/JoseFramework/Resources/config/jws_services.yml
@@ -10,6 +10,9 @@ services:
     Jose\Component\Signature\JWSVerifierFactory:
         public: true
 
+    Jose\Component\Signature\JWSLoaderFactory:
+        public: true
+
     Jose\Component\Signature\JWSTokenSupport:
         tags:
             - {'name': 'jose.checker.token_type'}
