--- a/src/Bundle/JoseFramework/Resources/config/commands.yml
+++ b/src/Bundle/JoseFramework/Resources/config/commands.yml
@@ -40,6 +40,10 @@ services:
         tags:
             - {name: 'console.command'}
 
+    Jose\Component\Console\SecretKeyGeneratorCommand:
+        tags:
+            - {name: 'console.command'}
+
     Jose\Component\Console\KeyFileLoaderCommand:
         tags:
             - {name: 'console.command'}
