--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "guzzlehttp/psr7": "^1.4",
         "php-http/httplug-bundle": "^1.7",
         "php-http/mock-client": "^1.0",
-        "phpstan/phpstan-phpunit": "^0.9.3",
+        "phpstan/phpstan": "^0.9.2",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
         "symfony/browser-kit": "^3.3|^4.0",
