Nested Token Builder Support

--- a/src/Bundle/JoseFramework/Resources/config/nested_token.yml
+++ b/src/Bundle/JoseFramework/Resources/config/nested_token.yml
@@ -5,3 +5,4 @@ services:
         public: true
 
     Jose\Component\Encryption\NestedTokenLoaderFactory: ~
+    Jose\Component\Encryption\NestedTokenBuilderFactory: ~
