--- a/src/Bundle/JoseFramework/Tests/config/config_test.yml
+++ b/src/Bundle/JoseFramework/Tests/config/config_test.yml
@@ -80,12 +80,16 @@ jose:
                 signature_algorithms: ['PS256']
                 key_encryption_algorithms: ['RSA-OAEP']
                 content_encryption_algorithms: ['A128GCM']
+                jws_serializers: ['jws_compact']
+                jwe_serializers: ['jwe_compact']
                 is_public: true
         builders:
             nested_token_builder_1:
                 signature_algorithms: ['PS256']
                 key_encryption_algorithms: ['RSA-OAEP']
                 content_encryption_algorithms: ['A128GCM']
+                jws_serializers: ['jws_compact']
+                jwe_serializers: ['jwe_compact']
                 is_public: true
     keys:
         jwk1:
