Minor tests modifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,4 @@ script:
 
 after_success:
     - ./vendor/bin/coveralls --no-interaction
+    - ./vendor/bin/phpstan analyze --level max -c phpstan.neon src
