--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -13,6 +13,8 @@ splits:
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-key-mgmt.git"
     - prefix: "src/Component/Console"
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-console.git"
+    - prefix: "src/Component/Experimental"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-experimental.git"
     - prefix: "src/Bundle/JoseFramework"
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-bundle.git"
 
