Sub-packages for algorithms + gitsplit configuration

--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -17,6 +17,32 @@ splits:
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-experimental.git"
     - prefix: "src/Bundle/JoseFramework"
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-bundle.git"
+    - prefix: "src/EncryptionAlgorithm/ContentEncryption/AESCBC"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aescbc.git"
+    - prefix: "src/EncryptionAlgorithm/ContentEncryption/AESGCM"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aesgcm.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/AESGCMKW"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aesgcmkw.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/AESKW"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aeskw.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/Direct"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-dir.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/ECDHES"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-ecdhes.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/PBES2"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-pbes2.git"
+    - prefix: "src/EncryptionAlgorithm/KeyEncryption/RSA"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-rsa.git"
+    - prefix: "src/SignatureAlgorithm/ECDSA"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-ecdsa.git"
+    - prefix: "src/SignatureAlgorithm/EdDSA"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-eddsa.git"
+    - prefix: "src/SignatureAlgorithm/None"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-none.git"
+    - prefix: "src/SignatureAlgorithm/HMAC"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-hmac.git"
+    - prefix: "src/SignatureAlgorithm/RSA"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-rsa.git"
 
 origins:
     - ^master$
